Bug 516742.  Make RFindLineContaining walk backwards along the lines' frames too, not just along the lines.  r=roc,fantasai